@@ -45,14 +45,14 @@ public class DrawUtils
         // Precalculate the sine and cosine
         // Instead of recalculating sin/cos for each line segment,
         // this algorithm rotates the line around the center point
-        float theta = 2f * 3.1415926f / (float) numSegments;
-        float cos = (float) FastTrig.cos(theta);
-        float sin = (float) FastTrig.sin(theta);
-        float t;
+        final float theta = 2f * 3.1415926f / (float) numSegments;
+        final float cos = (float) FastTrig.cos(theta);
+        final float sin = (float) FastTrig.sin(theta);
 
         // Start at angle = 0
         float x = radius;
         float y = 0;
+        float tmp;
 
         glBegin(drawFilled ? GL_TRIANGLE_FAN : GL_LINE_LOOP);
         for (int i = 0; i < numSegments - 1; i++)
@@ -61,18 +61,61 @@ public class DrawUtils
             glVertex2f(x + centerX, y + centerY);
 
             // Apply the rotation matrix
-            t = x;
+            tmp = x;
             x = (cos * x) - (sin * y);
-            y = (sin * t) + (cos * y);
+            y = (sin * tmp) + (cos * y);
         }
         glVertex2f(x + centerX, y + centerY);
         glEnd();
     }
 
-    static void drawEllipse(float centerX, float centerY, float radius,
-            float xScaling, float yScaling, float angleOffset, int numSegments,
-            boolean drawFilled)
+    // TODO: Javadoc this
+    public static void drawEllipse(float centerX, float centerY, float width,
+            float height, float angleOffset, int numSegments, boolean drawFilled)
     {
+        if (numSegments < 3)
+        {
+            return;
+        }
+
+        // Convert angles into radians for our calculations
+        angleOffset = (float) Math.toRadians(angleOffset);
+
+        // Precalculate the sine and cosine
+        // Instead of recalculating sin/cos for each line segment,
+        // this algorithm rotates the line around the center point
+        final float theta = 2f * 3.1415926f / (float) numSegments;
+        final float cos = (float) FastTrig.cos(theta);
+        final float sin = (float) FastTrig.sin(theta);
+        final float offsetCos = (float) FastTrig.cos(angleOffset);
+        final float offsetSin = (float) FastTrig.sin(angleOffset);
+        final float yFactor = (height / width);
+
+        // Start at angle = 0
+        float x = width;// * offsetCos;
+        float y = 0f;//height * offsetSin;
+        float scaledX, scaledY, tmp;
+
+        glBegin(drawFilled ? GL_TRIANGLE_FAN : GL_LINE_LOOP);
+        for (int i = 0; i < numSegments - 1; i++)
+        {
+            // Rotate/scale the circle into an ellipse
+            scaledX = (x * offsetCos) - (y * yFactor * offsetSin);
+            scaledY = (x * offsetSin) + (y * yFactor * offsetCos);
+
+            // Output vertex
+            glVertex2f(scaledX + centerX, scaledY + centerY);
+
+            // Apply the rotation matrix to the circle
+            tmp = x;
+            x = (cos * x) - (sin * y);
+            y = (sin * tmp) + (cos * y);
+        }
+        scaledX = (x * offsetCos) - (y * yFactor * offsetSin);
+        scaledY = (x * offsetSin) + (y * yFactor * offsetCos);
+        glVertex2f(scaledX + centerX, scaledY + centerY);
+        glEnd();
+
         // TODO: implement drawEllipse()
     }
 
@@ -108,14 +151,14 @@ public class DrawUtils
         // Precalculate the sine and cosine
         // Instead of recalculating sin/cos for each line segment,
         // this algorithm rotates the line around the center point
-        float theta = arcAngle / (float) (numSegments);
-        float cos = (float) FastTrig.cos(theta);
-        float sin = (float) FastTrig.sin(theta);
-        float t;
+        final float theta = arcAngle / (float) (numSegments);
+        final float cos = (float) FastTrig.cos(theta);
+        final float sin = (float) FastTrig.sin(theta);
 
         // Start at angle startAngle
         float x = (float) (radius * FastTrig.cos(startAngle));
         float y = (float) (radius * FastTrig.sin(startAngle));
+        float tmp;
 
         glBegin(drawFilled ? GL_TRIANGLE_FAN : GL_LINE_STRIP);
         if (drawFilled)
@@ -128,9 +171,9 @@ public class DrawUtils
             glVertex2f(x + centerX, y + centerY);
 
             // Apply the rotation matrix
-            t = x;
+            tmp = x;
             x = (cos * x) - (sin * y);
-            y = (sin * t) + (cos * y);
+            y = (sin * tmp) + (cos * y);
         }
         glVertex2f(x + centerX, y + centerY);
         glEnd();
